# Aladdin_no_ROS

./: .gitignore  instructions.txt
python/: .#pick_and_place_spool.py  detector.py  peg_testing.py  pick_and_place_spool.py  test_circles.py  test_image_save.py  test_tag.py
visionServer/: CMakeLists.txt
visionServer/include/creel_tracker/: CreelTracker.hpp
visionServer/src/: CreelTracker.cpp  VisionServer.cpp
